src/objects/Preference_Category__c.object
<CustomObject>
    <fields>
        <fullName>Authors__c</fullName>
        <label>Authors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <label>Business Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Category Group</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Id__c</fullName>
        <label>Category Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Category_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category Id</label>
        <referenceTo>Preference_Category__c</referenceTo>
        <relationshipLabel>Preference Categories</relationshipLabel>
        <relationshipName>Preference_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Code__c</fullName>
        <label>Quality Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Rule__c</fullName>
        <label>Rank Rule</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Rule__c</fullName>
        <label>Response Rule</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Preference Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preference Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>